# specpipe

./: .gitignore  README.md  demo_script.py  demo_script_windows_parallel.py  pyproject.toml
.github/workflows/: build-deploy-docs.yml  build-release-deprecated.yml  build-release.yml  specpipe-package.yml  specpipe_release.yml  tests.yml
demo/: demo_script.py  demo_script_mock_data_only.py  demo_script_of_readme.py  demo_script_typical_workflow.py  demo_script_windows_parallel.py
demo/demo_data/: demo_1.xml  demo_2.xml  demo_3.xml  demo_4.xml  demo_5.xml  demo_raster_compressor.py
demo/demo_results_classification/Modeling/: sample_targets.csv
demo/demo_results_classification/Pre_execution_test_data/: pre_execution_data.json  test_images.tiff  test_images_px_app_raw.tiff  test_images_px_app_snv.tiff
demo/demo_results_classification/Preprocessing/: PreprocessingChainResult_chain_ind_0.csv  PreprocessingChainResult_chain_ind_0.dill  PreprocessingChainResult_chain_ind_0_2025-12-09_16-06-39.dill  PreprocessingChainResult_chain_ind_0_X_max.csv  PreprocessingChainResult_chain_ind_0_X_mean.csv  PreprocessingChainResult_chain_ind_0_X_median.csv  PreprocessingChainResult_chain_ind_0_X_min.csv  PreprocessingChainResult_chain_ind_1.csv  PreprocessingChainResult_chain_ind_1_2025-11-10_20-23-09.dill  PreprocessingChainResult_chain_ind_1_2025-12-09_16-06-39.dill  PreprocessingChainResult_chain_ind_1_X_kurtosis.csv  PreprocessingChainResult_chain_ind_1_X_max.csv  PreprocessingChainResult_chain_ind_1_X_mean.csv  PreprocessingChainResult_chain_ind_1_X_std.csv  PreprocessingChainResult_chain_ind_2.csv  PreprocessingChainResult_chain_ind_2_2025-11-10_20-23-09.dill  PreprocessingChainResult_chain_ind_2_2025-12-09_16-06-39.dill  PreprocessingChainResult_chain_ind_2_X_mean.csv  PreprocessingChainResult_chain_ind_2_X_median.csv  PreprocessingChainResult_chain_ind_2_X_skewness.csv  PreprocessingChainResult_chain_ind_2_X_std.csv  PreprocessingChainResult_chain_ind_2_y_stats.csv  PreprocessingChainResult_chain_ind_3.csv  PreprocessingChainResult_chain_ind_3.dill  PreprocessingChainResult_chain_ind_3_2025-12-09_16-06-39.dill  PreprocessingChainResult_chain_ind_3_X_mean.csv  PreprocessingChainResult_chain_ind_3_X_min.csv  PreprocessingChainResult_chain_ind_3_X_skewness.csv
demo/demo_results_classification/SpecExp_configuration/: SpecExp_data_configuration_created_at_2025-11-10_20-21-22.dill  SpecExp_data_configuration_created_at_2025-12-09_16-06-15_copy_at_2025-12-09_16-06-18.dill
demo/demo_results_classification/SpecPipe_configuration/: SpecPipe_added_process_2025-11-10_20-22-46.csv  SpecPipe_added_process_2025-12-09_16-06-18.csv  SpecPipe_full_factorial_chains_in_ID.csv  SpecPipe_full_factorial_chains_in_ID_2025-11-10_20-22-46.csv  SpecPipe_full_factorial_chains_in_label.csv  SpecPipe_pipeline_configuration_created_at_2025-11-10_20-22-31_copy_at_2025-11-10_20-22-46.dill  SpecPipe_pipeline_configuration_created_at_2025-12-09_16-06-17.dill
demo/demo_results_classification/test_run/: Preprocess_chain_#1.txt
demo/demo_results_regression/Modeling/: sample_targets.csv  sample_targets_stats.csv
demo/demo_results_regression/Pre_execution_test_data/: Pre_execution_data_roi_specs.csv  pre_execution_data.json
demo/demo_results_regression/Preprocessing/: PreprocessingChainResult_chain_ind_0.csv  PreprocessingChainResult_chain_ind_0_2025-11-10_20-30-03.dill  PreprocessingChainResult_chain_ind_0_2025-12-09_16-07-25.dill  PreprocessingChainResult_chain_ind_0_X_kurtosis.csv  PreprocessingChainResult_chain_ind_0_X_skewness.csv  PreprocessingChainResult_chain_ind_0_X_std.csv  PreprocessingChainResult_chain_ind_1.csv  PreprocessingChainResult_chain_ind_1.dill  PreprocessingChainResult_chain_ind_1_2025-12-09_16-07-25.dill  PreprocessingChainResult_chain_ind_1_X_median.csv  PreprocessingChainResult_chain_ind_1_X_min.csv  PreprocessingChainResult_chain_ind_1_X_skewness.csv  PreprocessingChainResult_chain_ind_2.csv  PreprocessingChainResult_chain_ind_2_2025-11-10_20-30-03.dill  PreprocessingChainResult_chain_ind_2_2025-12-09_16-07-25.dill  PreprocessingChainResult_chain_ind_2_X_kurtosis.csv  PreprocessingChainResult_chain_ind_2_X_max.csv  PreprocessingChainResult_chain_ind_2_X_min.csv  PreprocessingChainResult_chain_ind_3.csv  PreprocessingChainResult_chain_ind_3_2025-11-10_20-30-03.dill  PreprocessingChainResult_chain_ind_3_2025-12-09_16-07-25.dill  PreprocessingChainResult_chain_ind_3_X_kurtosis.csv  PreprocessingChainResult_chain_ind_3_X_max.csv  PreprocessingChainResult_chain_ind_3_X_median.csv  PreprocessingChainResult_chain_ind_3_X_std.csv
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: index.css
specpipe-deprecated/: LICENSE  README.md  pyproject.toml
specpipe-deprecated/specpipe/: __init__.py
src/specpipe/: __init__.py  example_code.py  example_data.py  groupstats.py  modelconnector.py  modeleva.py  pipeline.py  pipeline_processor.py  pipeline_validator.py  rasterop.py  resultcli.py  roistats.py  specexp.py  specexp_vis.py  specio.py  specpipe.py  specpipe_processor.py  specpipe_validator.py
src/swectral/: __init__.py  example_data.py  groupstats.py  modelconnector.py  modeleva.py  pipeline.py  pipeline_processor.py  pipeline_tqdm.py  pipeline_validator.py  rasterop.py  resultcli.py  roistats.py  specexp.py  specexp_vis.py  specio.py
tests/: test_groupstats.py  test_modelconnector.py  test_modeleva.py  test_pipeline.py  test_pipeline_processor.py  test_rasterop.py  test_resultcli.py  test_roistats.py  test_specexp.py  test_specexp_vis.py  test_specio.py  test_specpipe.py  test_specpipe_processor.py  tests_rasterop.py  tests_roistats.py  tests_specexp.py  tests_specio.py  tests_specpipe.py
tests/denoiser/: test_decomposition_filters.py  test_denoiser_utils.py  test_local_polynomial.py  test_moving_avg.py  test_outlier.py
tests/functions/: test_aucnorm.py  test_minmax.py  test_snv.py
tests/modelcombiners/: test_bagging.py  test_model_connector.py  test_regressor_to_classifier.py
tests/vegeind/: test_vi_functions.py
(+702 files in other folders)
