[build-system]
requires = ["setuptools>=66.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specpipe"
version = "0.3.5"
description = "Deprecated: this project has been renamed to swectral."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Siwei Luo", email = "siwei1102@outlook.de"}
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "hyperspectral-imaging",
    "spectral-image-processing",
    "hyperspectral-modeling",
    "model-evaluation-automation",
    "spectral-modeling-pipeline"
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
